[package]
name = "tagzen"
description = "An api microservice to tag and catagorise tv & movies at ease"
version = "0.1.0"
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
regex = "1.4.2"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.2", features = ["json", "helmet"] }
serde = { version = "1", features = ["derive"] }
